--- a/src/FsVote.fsproj
+++ b/src/FsVote.fsproj
@@ -10,6 +10,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Akka.FSharp" Version="1.3.10" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Update="FSharp.Core" Version="4.5.3" />
   </ItemGroup>
 
