--- a/src/AkkaDemo.fsproj
+++ b/src/AkkaDemo.fsproj
@@ -6,6 +6,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Include="Messages.fs" />
+    <Compile Include="Snippets.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
 
